# mpu6050

./: CMakeLists.txt  README.md
include/: mpu6050.h  mpu6050_cfg.h
src/: mpu6050.c
